fix phantom & taurus card width, align and so on

--- a/src/components/DefaultLayout/style.scss
+++ b/src/components/DefaultLayout/style.scss
@@ -5,9 +5,8 @@
 }
 
 .MuiGrid-container {
-  padding-right: 1%;
   z-index: 99;
-  padding-top: 40px;
+  padding-top: 0px;
   padding-bottom: 30px;
 }
 
