--- a/src/components/Navbar/style.scss
+++ b/src/components/Navbar/style.scss
@@ -99,6 +99,6 @@ $hover-color: #FF4A80;
     fill: $hover-color !important;
   }
   span {
-    color: $hover-color;
+    color: $hover-color !important;
   }
 }
