--- a/src/routes/Stratigies/Routes/Phantom/style.scss
+++ b/src/routes/Stratigies/Routes/Phantom/style.scss
@@ -1,4 +1,3 @@
 .phantom-container {
-  width: 100%;
-  padding: 0 15px 0 50px;
+  padding: 0 30px 0 30px;
 }
