--- a/src/routes/Stratigies/Routes/Taurus/components/TaurusCard/style.scss
+++ b/src/routes/Stratigies/Routes/Taurus/components/TaurusCard/style.scss
@@ -2,10 +2,11 @@
 
 .card-container {
 
-  padding: 0 45px 0 45px;
-
   .card-wrapper {
+    width: 233px;
     height: 320px;
+    margin-left: auto;
+    margin-right: auto;
     margin-top: 30px;
     border-radius: 15px;
     box-shadow: 0px 4px 4px 0px #00000040;
@@ -42,11 +43,11 @@
 
       .left {
         position: absolute;
-        left: 22%;
+        left: 25px;
       }
       .right {
         position: absolute;
-        left: 48%;
+        left: 100px;
       }
     }
 
